--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "helperpro-mcp",
+  "name": "@gshaxor/helperpro-mcp",
   "version": "1.0.0",
   "description": "A TypeScript implementation of the [Model Context Protocol (MCP)](https://modelcontextprotocol.io/) for code analysis. This server enables LLMs to interact with codebases.",
   "main": "src/index.js",
   "bin": {
     "helperpro-mcp": "./build/index.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
